--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SignalSys Analyzer - Identificación de Sistemas de Control</title>
   <meta name="description" content="Herramienta para identificación y análisis de sistemas de control a partir de datos experimentales">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/src/assets/logo-light-mode.png">
   <!-- Precargar fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
